--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>FakeNewsApp</title>
+    <title>Fact or Fake - Joue le jeu des fake news !</title>
+    <meta
+      name="description"
+      content="Démasquez les fausses informations dans ce jeu captivant de détection de fake news ! Testez vos compétences en discernant la vérité des mensonges dans une série de scénarios impliquant des personnalités politiques, des dirigeants d'entreprise et des figures publiques. Exercez votre esprit critique et votre esprit d'analyse pour séparer le vrai du faux. Êtes-vous prêt à relever le défi et à devenir un expert en démystification des fake news ? Jouez dès maintenant !"
+    />
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
@@ -29,6 +33,20 @@
       href="https://fonts.googleapis.com/css2?family=Electrolize&display=swap"
       rel="stylesheet"
     />
+    <script type="text/javascript">
+      (function (c, l, a, r, i, t, y) {
+        c[a] =
+          c[a] ||
+          function () {
+            (c[a].q = c[a].q || []).push(arguments);
+          };
+        t = l.createElement(r);
+        t.async = 1;
+        t.src = "https://www.clarity.ms/tag/" + i;
+        y = l.getElementsByTagName(r)[0];
+        y.parentNode.insertBefore(t, y);
+      })(window, document, "clarity", "script", "h5rdsq9m70");
+    </script>
   </head>
   <body class="mat-typography">
     <app-root></app-root>
